[gd_scene load_steps=9 format=3 uid="uid://b03vob77kiiig"]

[ext_resource type="PackedScene" uid="uid://c1mkd1l3tepiy" path="res://simulator.tscn" id="1_bv3ai"]
[ext_resource type="Script" uid="uid://dtoo8gjytj3bx" path="res://simulator_window.gd" id="1_ccm4y"]
[ext_resource type="PackedScene" uid="uid://digpdhdemtlyi" path="res://real_time_variable_plot.tscn" id="3_7fye7"]
[ext_resource type="Script" uid="uid://8pdtuj1g0oie" path="res://addons/graph_2d/custom_nodes/legend.gd" id="4_38hed"]
[ext_resource type="Script" uid="uid://hp3u6j80mhrf" path="res://addons/graph_2d/custom_nodes/coordinate.gd" id="5_7ko4f"]
[ext_resource type="Script" uid="uid://iavila7mbw33" path="res://addons/graph_2d/custom_nodes/axis.gd" id="6_si02b"]
[ext_resource type="Script" uid="uid://beb8ymine6c0d" path="res://addons/graph_2d/custom_nodes/grid.gd" id="7_776f0"]
[ext_resource type="PackedScene" uid="uid://cbjjaf11lvlve" path="res://collapsable.tscn" id="8_nx4xn"]

[node name="simulator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccm4y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="option_panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/option_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button5" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "No control
"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "use PID"

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "use SF
"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "save data as csv
"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter filename:"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 30)
layout_mode = 2
text = "G:\\OLD\\Dev\\repositories\\pendolo-inverso\\analisi_dati\\data.csv"
placeholder_text = "enter file path/name"
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "reset
"

[node name="show graphs" type="Button" parent="HBoxContainer/VBoxContainer/option_panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "show graphs
"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 996)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="simulation environment" parent="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_bv3ai")]

[node name="graphs" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="collapsable2" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs" instance=ExtResource("8_nx4xn")]
layout_mode = 2
text = "theta"

[node name="real_time_variable_plot" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable2" instance=ExtResource("3_7fye7")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
source = NodePath("../../../SubViewportContainer/SubViewport/simulation environment/plant")
var_name = "theta"
time_window = 5.0

[node name="graph" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable2/real_time_variable_plot" index="0"]
y_label = "theta"

[node name="collapsable4" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs" instance=ExtResource("8_nx4xn")]
layout_mode = 2
text = "theta dot"

[node name="real_time_variable_plot2" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4" instance=ExtResource("3_7fye7")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
source = NodePath("../../../SubViewportContainer/SubViewport/simulation environment/plant")
var_name = "theta_prime"
time_window = 5.0

[node name="graph" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2" index="0"]
y_label = "theta dot"

[node name="Background" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph" index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.223529, 0.411765, 0.682353, 1)

[node name="PlotArea" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph" index="5"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -50.0

[node name="Legend" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph/PlotArea"]
anchors_preset = 0
script = ExtResource("4_38hed")

[node name="55337" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph/PlotArea/Legend"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 20.0

[node name="Coordinate" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph/PlotArea"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_right = -20.0
grow_horizontal = 0
text = "(0.0, 0.0)"
script = ExtResource("5_7ko4f")

[node name="Axis" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph" index="6"]
anchors_preset = 0
script = ExtResource("6_si02b")

[node name="XLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph/Axis"]
layout_mode = 0
offset_left = 317.5
offset_top = 120.0
offset_right = 375.5
offset_bottom = 146.0
text = "time [s]"

[node name="YLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph/Axis"]
layout_mode = 0
offset_left = 5.0
offset_top = 65.0
offset_right = 90.0
offset_bottom = 91.0
rotation = -1.5708
text = "theta dot"

[node name="Grid" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2/graph" index="7"]
anchors_preset = 0
script = ExtResource("7_776f0")

[node name="collapsable" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs" instance=ExtResource("8_nx4xn")]
layout_mode = 2
text = "position"

[node name="real_time_variable_plot2" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable" instance=ExtResource("3_7fye7")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
source = NodePath("../../../SubViewportContainer/SubViewport/simulation environment/plant")
var_name = "x"
time_window = 5.0

[node name="graph" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable/real_time_variable_plot2" index="0"]
y_min = -11.0
y_max = 10.0
y_label = "position"

[node name="collapsable5" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs" instance=ExtResource("8_nx4xn")]
layout_mode = 2
text = "velocity"

[node name="real_time_variable_plot2" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5" instance=ExtResource("3_7fye7")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
source = NodePath("../../../SubViewportContainer/SubViewport/simulation environment/plant")
var_name = "v"
time_window = 5.0

[node name="graph" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2" index="0"]
y_min = -11.0
y_max = 10.0
y_label = "velocity"

[node name="Background" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph" index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.223529, 0.411765, 0.682353, 1)

[node name="PlotArea" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph" index="5"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -50.0

[node name="Legend" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph/PlotArea"]
anchors_preset = 0
script = ExtResource("4_38hed")

[node name="55337" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph/PlotArea/Legend"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 20.0

[node name="Coordinate" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph/PlotArea"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_right = -20.0
grow_horizontal = 0
text = "(0.0, 0.0)"
script = ExtResource("5_7ko4f")

[node name="Axis" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph" index="6"]
anchors_preset = 0
script = ExtResource("6_si02b")

[node name="XLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph/Axis"]
layout_mode = 0
offset_left = 317.5
offset_top = 120.0
offset_right = 375.5
offset_bottom = 146.0
text = "time [s]"

[node name="YLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph/Axis"]
layout_mode = 0
offset_left = 5.0
offset_top = 65.0
offset_right = 68.0
offset_bottom = 91.0
rotation = -1.5708
text = "velocity"

[node name="Grid" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2/graph" index="7"]
anchors_preset = 0
script = ExtResource("7_776f0")

[node name="collapsable3" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs" instance=ExtResource("8_nx4xn")]
layout_mode = 2
text = "input"

[node name="real_time_variable_plot3" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3" instance=ExtResource("3_7fye7")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
source = NodePath("../../../SubViewportContainer/SubViewport/simulation environment/controller")
var_name = "u"
time_window = 5.0

[node name="graph" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3" index="0"]
y_min = -11.0
y_max = 10.0
y_label = "input"

[node name="Background" type="ColorRect" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph" index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.223529, 0.411765, 0.682353, 1)

[node name="PlotArea" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph" index="5"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -50.0

[node name="Legend" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph/PlotArea"]
anchors_preset = 0
script = ExtResource("4_38hed")

[node name="154459" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph/PlotArea/Legend"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 20.0

[node name="Coordinate" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph/PlotArea"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_right = -20.0
grow_horizontal = 0
text = "(0.0, 0.0)"
script = ExtResource("5_7ko4f")

[node name="Axis" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph" index="6"]
anchors_preset = 0
script = ExtResource("6_si02b")

[node name="XLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph/Axis"]
layout_mode = 0
offset_left = 317.5
offset_top = 120.0
offset_right = 375.5
offset_bottom = 146.0
text = "time [s]"

[node name="YLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph/Axis"]
layout_mode = 0
offset_left = 5.0
offset_top = 65.0
offset_right = 47.0
offset_bottom = 91.0
rotation = -1.5708
text = "input"

[node name="Grid" type="Control" parent="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3/graph" index="7"]
anchors_preset = 0
script = ExtResource("7_776f0")

[connection signal="disable_plot" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable2/real_time_variable_plot" method="disable"]
[connection signal="disable_plot" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2" method="disable"]
[connection signal="disable_plot" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable/real_time_variable_plot2" method="disable"]
[connection signal="disable_plot" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2" method="disable"]
[connection signal="disable_plot" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3" method="disable"]
[connection signal="save_data" from="." to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/controller" method="save_data"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button5" to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/controller" method="set_mode" binds= [2]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button" to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/controller" method="set_mode" flags=3 binds= [1]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button2" to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/controller" method="set_mode" flags=3 binds= [0]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button4" to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/controller" method="reset"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/Button4" to="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment/plant" method="set_state" flags=3 binds= [0.01, 0.0, 0.0, 0.0]]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/option_panel/HBoxContainer/show graphs" to="." method="_on_show_graphs_toggled"]

[editable path="HBoxContainer/VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/simulation environment"]
[editable path="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable2/real_time_variable_plot"]
[editable path="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable4/real_time_variable_plot2"]
[editable path="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable/real_time_variable_plot2"]
[editable path="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable5/real_time_variable_plot2"]
[editable path="HBoxContainer/VBoxContainer/HBoxContainer/graphs/collapsable3/real_time_variable_plot3"]
